--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
+    "build": "rimraf dist && tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
