--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && tsc",
-    "start": "node api/index.ts",
-    "dev": "nodemon src/index.ts",
-    "vercel build": "echo hello"
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
